Code cleaning 3